# apple-spyder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
config/: config.example.yaml
src/apple_spyder/: __main__.py  api.py  logging_config.py  scheduler.py  settings.py
src/apple_spyder/channels/: __init__.py  apple_ota.py  apple_rss.py  bark.py  notifier.py  telegram.py  weibo.py
src/apple_spyder/repositories/: __init__.py  accessory_update_repository.py  database.py  init_db.sql  software_release_repository.py
src/apple_spyder/services/: __init__.py  accessory_updates.py  software_releases.py
src/apple_spyder/utils/: __init__.py  time_utils.py
templates/: index.html
tests/: test_bark.py  test_notifier.py  test_settings.py
